fixed bug where window collapses to less than lyrics height

--- a/app/assets/stylesheets/song.scss
+++ b/app/assets/stylesheets/song.scss
@@ -228,7 +228,7 @@ button.save-button:hover, button.annotation-button:hover {
   width: 40%;
   padding: 10px 40px 10px 30px;
   max-width: 400px;
-  height: 900px;
+  height: 400px;
 }
 
 .album-cover {
